Thu Feb  3 19:14:17 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* tao/Messaging/Asynch_Reply_Dispatcher.cpp:

	  Reverted this patch "Thu Jan 27 20:01:21 2005  Balachandran
	  Natarajan  <bala@dre.vanderbilt.edu>"

Wed Feb  2 22:17:49 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_arg_traits.cpp:
        * TAO_IDL/be/be_visitor_array/array_cs.cpp:
        * TAO_IDL/be/be_visitor_array/cdr_op_cs.cpp:
        
          Changed C-style casts in generated code for arrays
          to c++-style casts. Thanks again to Johhny Willemsen
          <jwillemsen@remedy.nl> for digging these up.

Wed Feb  2 20:25:18 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_arg_traits.cpp:
        * TAO_IDL/be_include/be_visitor_arg_traits.h:
        
          Added visit_attribute() method, which tales action
          only if the attribute type is an unaliased bounded (w)string.
          Thanks to Gary Maxey <gary.maxey@hp.com> for sending in
          the example IDL file that showed that the arg_traits
          visitor was not handling this case.
          
        * tests/IDL_Test/interface.idl:
        
          Added Gary Maxey's example IDL file to the test.

Wed Feb  2 19:26:22 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_sequence.cpp:
        
          Added missing comma in template parameter list of bounded
          CORBA::Object sequence base class. Thanks to Gary Maxey
          <gary.maxey@hp.com> for tracking down the problem.

Wed Feb  2 06:45:59 2005  Chad Elliott  <elliott_c@ociweb.com>

        * NEWS:

          Updated with information about PMB and GIOP fragments.

Wed Feb  2 09:14:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Utilization_Monitor.cpp:
          Use ACE_OS::strtok instead of strtok directly and replaced usage
          of NULL with 0
